- fixing bugs in loop handling - suppressing false alarms during loop unwinding.

--- a/gravy/src/log4j.properties
+++ b/gravy/src/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=INFO, stdout, stderr
-#log4j.rootLogger=INFO, stdout, stderr, file
+#log4j.rootLogger=INFO, stdout, stderr
+log4j.rootLogger=INFO, stdout, stderr, file
 
 # configure stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
@@ -18,6 +18,6 @@ log4j.appender.stderr.layout = org.apache.log4j.SimpleLayout
 
 # configure file
 log4j.appender.file = org.apache.log4j.FileAppender
-log4j.appender.file.file = /Users/schaef/Documents/workspace/jimple2boogie/gravy.log
+log4j.appender.file.file = ./gravy.log
 log4j.appender.file.file.threshold = INFO
 log4j.appender.file.layout = org.apache.log4j.SimpleLayout
