--- a/gravy/.gitignore
+++ b/gravy/.gitignore
@@ -1,7 +1,7 @@
 /.DS_Store
 /bin
 /.settings
-/passive.bpl
-/unstructured.bpl
-/cfg_doWhile.bpl
-/loopfree_doWhile.bpl
+/*.bpl
+/*.pdf
+/*.log
+/*.dot
