--- a/gravy/src/log4j.properties
+++ b/gravy/src/log4j.properties
@@ -17,7 +17,8 @@ log4j.appender.stderr.Target = System.err
 log4j.appender.stderr.layout = org.apache.log4j.SimpleLayout
 
 # configure file
-log4j.appender.file = org.apache.log4j.FileAppender
+log4j.appender.file = org.apache.log4j.RollingFileAppender
+log4j.appender.file.Append = false
 log4j.appender.file.file = ./gravy.log
 log4j.appender.file.file.threshold = INFO
 log4j.appender.file.layout = org.apache.log4j.SimpleLayout
