- prepared gravy to be used as a library - added ReportPrinter stubs

--- a/gravy/build.xml
+++ b/gravy/build.xml
@@ -32,7 +32,7 @@
                 
                 <mkdir dir="${bin}" />
 
-                <javac srcdir="${src}" destdir="${bin}" includeAntRuntime="false">
+                <javac srcdir="${src}" destdir="${bin}" includeAntRuntime="false" debug="on">
                         <classpath>
                                 <fileset dir="${lib}" includes="**/*.jar" />
                         </classpath>
