--- a/gravy/src/log4j.properties
+++ b/gravy/src/log4j.properties
@@ -20,5 +20,5 @@ log4j.appender.stderr.layout = org.apache.log4j.SimpleLayout
 log4j.appender.file = org.apache.log4j.RollingFileAppender
 log4j.appender.file.Append = false
 log4j.appender.file.file = ./gravy.log
-log4j.appender.file.file.threshold = INFO
+log4j.appender.file.file.threshold = DEBUG
 log4j.appender.file.layout = org.apache.log4j.SimpleLayout
