--- a/gravy/src/log4j.properties
+++ b/gravy/src/log4j.properties
@@ -5,7 +5,8 @@ log4j.rootLogger=INFO, stdout, stderr, file
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Threshold = INFO
 log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.layout = org.apache.log4j.SimpleLayout
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %p (%t) [%c] - %m%n
 log4j.appender.stdout.filter.filter1 = org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.stdout.filter.filter1.levelMin = DEBUG
 log4j.appender.stdout.filter.filter1.levelMax = INFO
@@ -14,11 +15,13 @@ log4j.appender.stdout.filter.filter1.levelMax = INFO
 log4j.appender.stderr = org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.Threshold = ERROR
 log4j.appender.stderr.Target = System.err
-log4j.appender.stderr.layout = org.apache.log4j.SimpleLayout
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern=%d %p (%t) [%c] - %m%n
 
 # configure file
 log4j.appender.file = org.apache.log4j.RollingFileAppender
 log4j.appender.file.Append = false
 log4j.appender.file.file = ./gravy.log
 log4j.appender.file.file.threshold = INFO
-log4j.appender.file.layout = org.apache.log4j.SimpleLayout
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d %p (%t) [%c] - %m%n
